==> wujique/Pboot/mcu/stm32h750/mcu_dev/mcu_uart.c <==
#include "mcu.h"
#include "p_kfifo.h"
#include "log.h"
#define MCU_UART2_BUF_SIZE       256
#define MCU_UART4_BUF_SIZE       1024*2

s32 mcu_uart_open(McuUartNum comport)
{

	if(comport >= MCU_UART_MAX) return -1;

	if(McuUart[comport].gd >=0) return -1;

	if(comport == MCU_UART_1) { 	
	} else if(comport == MCU_UART_2) {
		__HAL_RCC_USART2_CLK_ENABLE();
		
		McuUart[MCU_UART_2].End = 0;
		McuUart[MCU_UART_2].Head = 0;
		McuUart[MCU_UART_2].OverFg = 0;
		McuUart[MCU_UART_2].size = MCU_UART2_BUF_SIZE;
		McuUart[MCU_UART_2].gd = 0;
		
		McuUart[MCU_UART_2].Buf = McuUart2Buf;

		mcu_MX_USART2_UART_Init();
	} else if(comport == MCU_UART_4) {
		__HAL_RCC_UART4_CLK_ENABLE();

		/* 初始化接收缓冲区 */
		
		pkfifo_init(&McuUart4Fifo, McuUart4Buf, MCU_UART4_BUF_SIZE, sizeof(char));
		
		mcu_MX_UART4_Init();
		__HAL_UART_ENABLE_IT(&McuHuart4, UART_IT_RXNE);
		
		McuUart[MCU_UART_4].gd = 0;
	} else {
		/* 串口号不支持*/
		return -1;
	}
	return (0);
}

s32 mcu_uart_write (McuUartNum comport, u8 *buf, s32 len)
{
	u32 t;
	u16 ch;
  
	if (len <= 0) 	return(-1);
		
	if(buf == NULL) return(-1);
	
	if(comport >= MCU_UART_MAX)	return -1;

	if(McuUart[comport].gd < 0)	return -1;

	if (comport == MCU_UART_2) {
		HAL_UART_Transmit(&McuHuart2, buf, len, 100);	

	} else if(comport == MCU_UART_4) {
		HAL_UART_Transmit(&McuHuart4, buf, len, 100);
	} else	return -1;
	
	return(0);
}
