==> spfanlost/myMcu/src/mcu/stm32f103/mcu_uart.c <==
#include "mcu.h"
#include "mcu_uart.h"
#include "log.h"
#include "alloc.h"
#define MCU_UART1_BUF_SIZE       256
#define MCU_UART2_BUF_SIZE       1024
#define MCU_UART3_BUF_SIZE       256

s32 mcu_uart_open(McuUartNum comport)
{
    GPIO_InitTypeDef GPIO_InitStructure;
    USART_InitTypeDef USART_InitStructure;
    NVIC_InitTypeDef NVIC_InitStructure;
	
	if(comport >= MCU_UART_MAX)
		return -1;

	if(McuUart[comport].gd >=0)
		return -1;

	if(comport == MCU_UART_1)
	{
		McuUart[MCU_UART_1].USARTx = USART1;
		McuUart[MCU_UART_1].End = 0;
		McuUart[MCU_UART_1].Head = 0;
		McuUart[MCU_UART_1].OverFg = 0;
		McuUart[MCU_UART_1].size = MCU_UART1_BUF_SIZE;
		McuUart[MCU_UART_1].gd = 0;
		McuUart[MCU_UART_1].Buf = (u8 *)wjq_malloc(MCU_UART1_BUF_SIZE);

		// 打开串口时钟
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1, ENABLE);

		// TXD ---- PA9
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_9;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP; 
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
		GPIO_Init(GPIOA, &GPIO_InitStructure);
		// RXD ---- PA10
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;  
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
		GPIO_Init(GPIOA, &GPIO_InitStructure);

		//USART 初始化设置
		USART_InitStructure.USART_BaudRate = 115200;//波特率;
		USART_InitStructure.USART_WordLength = USART_WordLength_8b;//字长为 8 位
		USART_InitStructure.USART_StopBits = USART_StopBits_1;//一个停止位
		USART_InitStructure.USART_Parity = USART_Parity_No;//无奇偶校验位
		USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;//无硬件数据流控制
		USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;//收发
		USART_Init(USART1, &USART_InitStructure); //初始化串口
		USART_Cmd(USART1, ENABLE); //使能串口
		USART_ClearFlag(USART1, USART_FLAG_TC);

		USART_ITConfig(USART1, USART_IT_RXNE, ENABLE);//开启中断
		//Usart1NVIC 配置
		NVIC_InitStructure.NVIC_IRQChannel = USART1_IRQn;	
		NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 3;//抢占优先级
		NVIC_InitStructure.NVIC_IRQChannelSubPriority = 3;      //响应优先级
		NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
		NVIC_Init(&NVIC_InitStructure);

	}
	else if(comport == MCU_UART_2)
	{
		McuUart[MCU_UART_2].USARTx = USART2;
		McuUart[MCU_UART_2].End = 0;
		McuUart[MCU_UART_2].Head = 0;
		McuUart[MCU_UART_2].OverFg = 0;
		McuUart[MCU_UART_2].size = MCU_UART2_BUF_SIZE;
		McuUart[MCU_UART_2].gd = 0;
		
		McuUart[MCU_UART_2].Buf = (u8 *)wjq_malloc(MCU_UART2_BUF_SIZE);
		
		// 打开串口时钟
		RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART2, ENABLE);

		// TXD ---- PA2
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_2;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;        //复用
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
		GPIO_Init(GPIOA, &GPIO_InitStructure);
		// RXD ---- PA3
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_3;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;        //复用
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
		GPIO_Init(GPIOA, &GPIO_InitStructure);

		//USART 初始化设置
		USART_InitStructure.USART_BaudRate = 115200;//波特率;
		USART_InitStructure.USART_WordLength = USART_WordLength_8b;//字长为 8 位
		USART_InitStructure.USART_StopBits = USART_StopBits_1;//一个停止位
		USART_InitStructure.USART_Parity = USART_Parity_No;//无奇偶校验位
		USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;//无硬件数据流控制
		USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;//收发
		USART_Init(USART2, &USART_InitStructure); //初始化串口
		USART_Cmd(USART2, ENABLE); //使能串口
		USART_ClearFlag(USART2, USART_FLAG_TC);

		USART_ITConfig(USART2, USART_IT_RXNE, ENABLE);//开启中断
		//Usart2 NVIC 配置
		NVIC_InitStructure.NVIC_IRQChannel = USART2_IRQn;	
		NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 3;//抢占优先级
		NVIC_InitStructure.NVIC_IRQChannelSubPriority = 3;      //响应优先级
		NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
		NVIC_Init(&NVIC_InitStructure);

	}
	else if(comport == MCU_UART_3)
	{
		McuUart[MCU_UART_3].USARTx = USART3;
		McuUart[MCU_UART_3].End = 0;
		McuUart[MCU_UART_3].Head = 0;
		McuUart[MCU_UART_3].OverFg = 0;
		McuUart[MCU_UART_3].size = MCU_UART3_BUF_SIZE;
		McuUart[MCU_UART_3].gd = 0;
		McuUart[MCU_UART_3].Buf = McuUartLogBuf;//(u8 *)wjq_malloc(MCU_UART3_BUF_SIZE);

		// 打开串口时钟
		RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART3, ENABLE);

		// TXD ---- PB10
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;        //复用
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
		GPIO_Init(GPIOB, &GPIO_InitStructure);
		// RXD ---- PB11
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_11;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;        //复用
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;

		GPIO_Init(GPIOB, &GPIO_InitStructure);

		//USART 初始化设置
		USART_InitStructure.USART_BaudRate = 115200;//波特率;
		USART_InitStructure.USART_WordLength = USART_WordLength_8b;//字长为 8 位
		USART_InitStructure.USART_StopBits = USART_StopBits_1;//一个停止位
		USART_InitStructure.USART_Parity = USART_Parity_No;//无奇偶校验位
		USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;//无硬件数据流控制
		USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;//收发
		USART_Init(USART3, &USART_InitStructure); //初始化串口
		USART_Cmd(USART3, ENABLE); //使能串口
		USART_ClearFlag(USART3, USART_FLAG_TC);

		USART_ITConfig(USART3, USART_IT_RXNE, ENABLE);//开启中断
		//Usart3 NVIC 配置
		NVIC_InitStructure.NVIC_IRQChannel = USART3_IRQn;	
		NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 3;//抢占优先级
		NVIC_InitStructure.NVIC_IRQChannelSubPriority = 3;      //响应优先级
		NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
		NVIC_Init(&NVIC_InitStructure);
	}
	else
	{
		/* 串口号不支持*/
		return -1;
	}
    return (0);
}

s32 mcu_uart_write (McuUartNum comport, u8 *buf, s32 len)
{
    u32 t;
    u16 ch;
  
    if (len <= 0) 
        return(-1);
        
    if(buf == NULL) 
        return(-1);
	
	if(comport >= MCU_UART_MAX)
		return -1;

	if(McuUart[comport].gd < 0)
		return -1;
	
    while(len != 0)
    {
        // 等待串口发送完毕
        t = 0;
        while(USART_GetFlagStatus(McuUart[comport].USARTx, USART_FLAG_TXE) == RESET)
        {
            if(t++ >= 0x1000000)
                return(-1);
        }  
        ch = (u16)(*buf & 0xff);
        USART_SendData(McuUart[comport].USARTx, ch);
        buf++;
        len--;
    }
    
    return(0);
}
